Added score counter